[tool.poetry]
name = "sceptrelint"
version = "1.1.0"
packages = [{ include = "pre_commit_hooks" }]
readme = "README.md"
homepage = "https://github.com/Sceptre/sceptrelint"
repository = "https://github.com/Sceptre/sceptrelint"
authors = ["Sceptre <sceptreorg@gmail.com>"]
description = "pre-commit hooks for Sceptre"
keywords = ["sceptre", "linter", "pre-commit"]
license = "Apache-2.0"
classifiers = [
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Environment :: Console",
]

[tool.poetry.plugins."poetry.application.plugin"]
"check-file-names" = "pre_commit_hooks.check_file_names:main"
"check-stack-names" = "pre_commit_hooks.check_stack_names:main"
"check-stack-tags" = "pre_commit_hooks.check_stack_tags:main"
"check-stack-tag-values" = "pre_commit_hooks.check_stack_tag_values:main"

[tool.poetry.dependencies]
python = "^3.8"
Jinja2 = "^3.1"
PyYaml = "^6.0"
requests = "^2.28"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5"
tox = "^3.0"
pytest = "^8.0"
pytest-cov = "^4.0"
tox-gh-matrix = "^0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
