[metadata]
name = sceptrelint
version = 1.1.0
description = pre-commit hooks for Sceptre
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zaro0508/sceptrelint
author = Khai Do
author_email = zaro0508@gmail.com
license = Apache-2.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    Jinja2>=3.0.3,<4
    pyyaml>=6.0,<7
    requests>=2.0,<3
    toml
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    check-file-names = pre_commit_hooks.check_file_names:main
    check-stack-names = pre_commit_hooks.check_stack_names:main
    check-stack-tags = pre_commit_hooks.check_stack_tags:main
    check-stack-tag-values = pre_commit_hooks.check_stack_tag_values:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
